# the-helios-institution-msai-631

./: .gitignore  README.md  app.py  pyproject.toml  server.py  test_cases.txt
data/: faq.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: chat.ts
frontend/src/components/: ChatWindow.tsx  Icons.tsx  MessageBubble.tsx  WelcomeScreen.tsx
src/: chatbot.py  retriever.py  service.py  ui.py
